fix overflow player

--- a/Front/app/styles/ui/_map.less
+++ b/Front/app/styles/ui/_map.less
@@ -307,7 +307,7 @@
 
 .player{
 	// height: 500px !important;
-	overflow: auto;
+	// overflow: auto;
 	padding: 0 7px 0px 7px;
 	display:flex;
 	flex-direction: column;
